# canvas-callback

./: README.md
agent/: .env.example  .gitignore  langgraph.json  main.py  pyproject.toml
web/: env.example  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/app/(dashboard)/: layout.tsx
web/app/(dashboard)/[chatId]/: page.tsx
web/app/(dashboard)/n/: page.tsx
web/app/guide/: layout.tsx  page.tsx
web/app/handler/[...stack]/: page.tsx
web/components/: canvas-component.tsx  chat-sidebar.tsx  chat.tsx  interrupt-handler.tsx  markdown-renderer.tsx  markdown-text.tsx  thread.tsx  trip-card.tsx  trip-dialog.tsx
web/components/interrupts/: activity-selector.tsx  date-selector.tsx  destination-selector.tsx  generic-handler.tsx
web/components/ui/: canvas.tsx  date-range-picker.tsx  tooltip-icon-button.tsx
web/context/: action.tsx  canvas-context.tsx  utils.ts
web/lib/: convert_messages.ts  langgraph-client.ts  utils.ts
web/types/: index.tsx
