[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-anthropic>=0.3.8",
    "langchain-openai>=0.3.7",
    "langgraph-supervisor>=0.0.4",
    "langgraph>=0.2.75",
    "pillow>=11.1.0",
]
